[workspace]
members = [
  "cargo-marker",
  "marker_adapter",
  "marker_api",
  "marker_rustc_driver",
  "marker_utils",
  "marker_lints",
  "marker_uitest",
  "marker_uilints",
]
resolver = "2"

[profile.release]
codegen-units = 1
lto           = true
strip         = false


[workspace.package]
edition    = "2021"
keywords   = ["marker", "lint"]
license    = "MIT OR Apache-2.0"
repository = "https://github.com/rust-marker/marker"

# region replace-version dev
version = "0.3.0-dev"
# endregion replace-version dev

# The MSRV is applied to the public library crates published to crates.io
rust-version = "1.66"

[workspace.dependencies]
# region replace-version dev
marker_adapter = { path = "./marker_adapter", version = "0.3.0-dev" }
marker_api     = { path = "./marker_api", version = "0.3.0-dev" }
marker_error   = { path = "./marker_error", version = "0.3.0-dev" }
marker_uitest  = { path = "./marker_uitest", features = ["dev-build"] }
marker_utils   = { path = "./marker_utils", version = "0.3.0-dev" }
# endregion replace-version dev

bumpalo            = "3.12"
camino             = { version = "1.1", features = ["serde1"] }
cargo_metadata     = "0.17"
clap               = { version = "4.0", features = ["string", "derive"] }
expect-test        = "1.4"
itertools          = "0.11"
libloading         = "0.8.0"
miette             = { version = "5.9", features = ["fancy-no-backtrace"] }
rustc_tools_util   = "0.3"
semver             = "1.0"
serde              = { version = "1.0", features = ["derive"] }
serde_json         = "1.0"
shlex              = "1.0"
tempfile           = "3.6.0"
thiserror          = "1.0"
toml               = "0.7"
tracing            = "0.1"
tracing-error      = "0.2"
tracing-subscriber = "0.3"
typed-builder      = "0.16.0"
ui_test            = "0.11.7"
visibility         = "0.0.1"
yansi              = "1.0.0-rc.1"

[workspace.metadata.marker.lints]
marker_lints = { path = "./marker_lints" }
