[package]
name    = "cargo_marker"
version = "0.1.1"

categories  = ["development-tools::cargo-plugins"]
description = "Marker's CLI interface to automatically compile and run lint crates"
edition     = "2021"
keywords    = ["marker", "linting", "cli", "cargo", "cargo-subcommand"]
license     = "MIT OR Apache-2.0"
repository  = "https://github.com/rust-marker/marker"

# Crate names in Rust are fun. I reserved `cargo_marker` as a crate name. However,
# Cargo requires it's subcommands to use a dash like `cargo-marker`. Unable to
# rename the create on crates.io we now have this hack... At least it works
[[bin]]
name = "cargo-marker"
path = "src/main.rs"

[dependencies]
camino         = { version = "1.1", features = ["serde1"] }
cargo_metadata = "0.15.4"
clap           = { version = "4.0", features = ["string", "derive"] }
once_cell      = "1.17.0"
serde          = { version = "1.0", features = ["derive"] }
serde_json     = "1.0"
toml           = "0.7"
