[package]
name = "cargo_marker"

categories  = ["development-tools::cargo-plugins"]
description = "Marker's CLI interface to automatically compile and run lint crates"
keywords    = ["marker", "linting", "cli", "cargo", "cargo-subcommand"]

edition    = { workspace = true }
license    = { workspace = true }
repository = { workspace = true }
version    = { workspace = true }

# Crate names in Rust are fun. I reserved `cargo_marker` as a crate name. However,
# Cargo requires it's subcommands to use a dash like `cargo-marker`. Unable to
# rename the create on crates.io we now have this hack... At least it works
[[bin]]
name = "cargo-marker"
path = "src/main.rs"

[dependencies]
marker_error = { workspace = true }

camino             = { workspace = true }
cargo_metadata     = { workspace = true }
clap               = { workspace = true }
itertools          = { workspace = true }
miette             = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
shlex              = { workspace = true }
thiserror          = { workspace = true }
toml               = { workspace = true }
tracing            = { workspace = true }
tracing-error      = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
yansi              = { workspace = true }

[dev-dependencies]
expect-test = "1.4"
