[package]
name = "linter_driver_rustc"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linter_api = { path = "../linter_api", features = ["driver-api"] }
linter_adapter = { path = "../linter_adapter" }

bumpalo = "3.9.1"

[package.metadata.rust-analyzer]
rustc_private=true
