[package]
name = "linter_lints"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
linter_api = { path = "../linter_api" }

[dev-dependencies]
compiletest_rs = { version = "0.8", features = ["tmp", "rustc"] }
