[package]
name    = "marker_adapter"
version = "0.1.1"

description = "Marker's adapter for common functions shared among lint drivers"
edition     = "2021"
keywords    = ["marker"]
license     = "MIT OR Apache-2.0"
repository  = "https://github.com/rust-marker/marker"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
marker_api   = { path = "../marker_api", version = "0.1.1", features = ["driver-api"] }
marker_utils = { path = "../marker_utils", version = "0.1.1" }

cfg-if     = "1.0.0"
libloading = "0.8.0"
