[package]
description = "Lints for the marker_api and marker_utils crate"
edition     = "2021"
keywords    = ["marker", "lint"]
license     = "MIT OR Apache-2.0"
name        = "marker_lints"
repository  = "https://github.com/rust-marker/marker"
version     = "0.1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
marker_api = { path = "../marker_api", version = "0.1.1" }

[dev-dependencies]
marker_uitest = { path = "../marker_uitest", features = ["dev-build"] }

[[test]]
harness = false
name    = "uitest"
