[package]
name = "marker_lints"

description = "Lints for the marker_api and marker_utils crate"

edition    = { workspace = true }
keywords   = { workspace = true }
license    = { workspace = true }
repository = { workspace = true }
version    = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
marker_api = { workspace = true }

[dev-dependencies]
marker_uitest = { workspace = true }

[[test]]
harness = false
name    = "uitest"
