[package]
name = "marker_rustc_driver"

build       = "build.rs"
description = "Marker's lint driver for rustc"

edition    = { workspace = true }
keywords   = { workspace = true }
license    = { workspace = true }
repository = { workspace = true }
version    = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
marker_adapter = { workspace = true }
marker_api     = { workspace = true, features = ["driver-api"] }

bumpalo          = { workspace = true }
rustc_tools_util = { workspace = true }

[build-dependencies]
rustc_tools_util = { workspace = true }

[package.metadata.rust-analyzer]
rustc_private = true
