[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name    = "marker_uilints"
publish = false
version = "0.1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
marker_api = { path = "../marker_api", version = "0.1.1" }

[dev-dependencies]
marker_uitest = { path = "../marker_uitest", features = ["dev-build"] }

[[test]]
harness = false
name    = "uitest"
