[package]
name = "marker_utils"

categories  = ["development-tools"]
description = "Marker's standard library for creating lints"

edition    = { workspace = true }
keywords   = { workspace = true }
license    = { workspace = true }
repository = { workspace = true }
version    = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
marker_api = { workspace = true }
